tests/error/modifier_errors/captured_var_inout_own.err
Error: Not owned (at $FILE:14:16)
   | 
12 |     a = qubit()
13 |     with dagger:
14 |         discard(a)
   |                 ^ Function `discard` wants to take ownership of this argument,
   |                   but `__modified__()` doesn't own `a`
   | 
12 |     a = qubit()
   |     - Argument `a` is only borrowed. Consider taking ownership:
   |       `a: qubit @owned`

Guppy compilation failed due to 1 previous error
